--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "contentlayer2": "^0.5.7",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-contentlayer2": "^0.5.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0"
