--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "next-contentlayer2": "^0.5.7",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
