--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.0",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -18,7 +20,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.7",
     "next-contentlayer2": "^0.5.7",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -35,6 +37,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
