--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^3.0.0",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.4.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
