✨ マジックリンク認証を追加する

--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:restart": "docker compose down && docker compose up -d",
+    "docker:exec": "docker compose exec db bash",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name",
+    "prisma:studio": "prisma studio",
+    "prisma:push": "prisma db push",
+    "prisma:status": "prisma migrate status",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:format": "prisma format",
+    "prisma:validate": "prisma validate",
+    "prisma:pull": "prisma db pull"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
@@ -41,6 +55,7 @@
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^3.0.0",
     "remark-gfm": "^4.0.1",
+    "resend": "^4.5.2",
     "shiki": "^3.4.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
