🔧 .env.exampleファイルを更新する

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,11 @@ GOOGLE_CLIENT_SECRET=
 DATABASE_URL=
 
 # -----------------------------------------------------------------------------
+# Cron Jobs
+# -----------------------------------------------------------------------------
+CRON_SECRET=
+
+# -----------------------------------------------------------------------------
 # Email (Resend)
 # -----------------------------------------------------------------------------
 SMTP_FROM=
