--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:format": "prisma format",
     "prisma:validate": "prisma validate",
-    "prisma:pull": "prisma db pull"
+    "prisma:pull": "prisma db pull",
+    "cron": "node scripts/cron-simulator.mjs",
+    "cron:run-now": "node scripts/cron-simulator.mjs --run-now"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
@@ -42,11 +44,14 @@
     "clsx": "^2.1.1",
     "contentlayer2": "^0.5.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-auth": "^4.24.7",
     "next-contentlayer2": "^0.5.7",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.1.1",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
