--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "^15.3.5",
     "next-auth": "^4.24.7",
     "next-contentlayer2": "^0.5.7",
     "next-themes": "^0.4.6",
@@ -71,10 +71,12 @@
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
