♻️ リファクタリングする

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ GOOGLE_CLIENT_SECRET=
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL)
 # -----------------------------------------------------------------------------
+PRISMA_DATABASE_URL=
 DATABASE_URL=
 
 # -----------------------------------------------------------------------------
