--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
+BASIC_AUTH_ENABLED=
+BASIC_AUTH_USERNAME=
+BASIC_AUTH_PASSWORD=
+
 # -----------------------------------------------------------------------------
 # Authentication (NextAuth.js)
 # -----------------------------------------------------------------------------
@@ -12,6 +16,7 @@ NEXTAUTH_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_ACCESS_TOKEN=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
