--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  mailpit:
+  mail-server:
     image: axllent/mailpit:latest
     container_name: mailpit
     ports:
