--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@auth/prisma-adapter": "^2.9.0",
     "@editorjs/code": "^2.9.3",
     "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
+    "@editorjs/inline-code": "^1.5.2",
     "@editorjs/link": "^2.6.2",
     "@editorjs/list": "^2.0.8",
+    "@editorjs/table": "^2.4.5",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.13",
