--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "resend": "^4.5.2",
     "shiki": "^3.4.2",
     "sonner": "^2.0.3",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
   },
