🐛 ビルド時のバグを修正する

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
+    "mdast-util-toc": "^7.1.0",
     "next": "^15.3.5",
     "next-auth": "^4.24.7",
     "next-contentlayer2": "^0.5.7",
@@ -64,6 +65,7 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^3.0.0",
+    "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "resend": "^4.5.2",
     "shiki": "^3.4.2",
